# trackme

./: .gitignore  README.md  deno.json  index.html  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  notifications.rs  recurrence.rs  vault.rs
src/components/: AiSettingsModal.tsx  Dialog.tsx  FileTreeList.tsx  MarkdownEditor.tsx  RecurrenceEditor.tsx  SearchModal.tsx  VaultSwitcher.tsx
src/lib/: ThemeContext.tsx  aiChat.ts  aiConfig.ts  aiHistory.ts  appConfig.ts  bridge.ts  frontmatter.ts  path.ts  projects.ts  todos.ts  types.ts
src/styles/: global.css  milkdown.css
src/views/: AgendaView.tsx  AiChatView.tsx  MainShell.tsx  MeetingsView.tsx  NotesView.tsx  ProjectsView.tsx  TodosView.tsx  TrashView.tsx  VaultPicker.tsx  Welcome.tsx
